# py-logician

./: README.md  pyproject.toml
.github/workflows/: lint.yml  python-publish.yml  test.yml  typecheck.yml
src/logician/: __init__.py  __main__.py  _repo.py  base.py  constants.py  delegating.py  errors.py  format_mappers.py  formatters.py  main.py
src/logician/configurators/: __init__.py  base.py  env.py  list_lc.py  supplier.py
src/logician/configurators/vq/: __init__.py  base.py  comm.py  sep.py
src/logician/std_log/: __init__.py  base.py  configurator.py  utils.py
src/logician/stdlog/: __init__.py  all_levels.py  all_levels_impl.py  base.py  configurator.py  constants.py  format_mappers.py  formatters.py  hndlr_cfgr.py  utils.py
src/vt/utils/logging/: __init__.py  base.py
src/vt/utils/logging/lib_logging/: __init__.py  delegating.py
src/vt/utils/logging/lib_logging/configurators/: __init__.py  base.py  env.py  list_lc.py  supplier.py
src/vt/utils/logging/lib_logging/configurators/vq/: __init__.py  base.py  comm.py  sep.py
src/vt/utils/logging/lib_logging/std_log/: __init__.py  all_levels.py  all_levels_impl.py  base.py  configurator.py  formatters.py
src/vt/utils/logging/logging/: __init__.py  base.py  base_impl.py  cmd.py  configurators.py  delegating.py  formatters.py  vq.py
src/vt/utils/logging/logging/bridge/: __init__.py  base.py  base_impl.py
src/vt/utils/logging/logging/cmd/: __init__.py  base.py
src/vt/utils/logging/logging/configurators/: __init__.py
src/vt/utils/logging/logging/configurators/vq/: __constants__.py  __init__.py  base.py  comm.py  sep.py
src/vt/utils/logging/logging/delegating/: __init__.py  base.py  base_impl.py
src/vt/utils/logging/logging/std_log/: __constants__.py  __init__.py  _base_impl.py  all_levels.py  all_levels_impl.py  base.py  basic_logger.py  basic_logger_impl.py  configurator.py  formatters.py  std_log.py  utils.py
src/vt/utils/logging/logging/std_log/vq/: base.py
src/vt/utils/logging/logging/vq/: __init__.py  base.py
src/vt/utils/logging/std_log/: __constants__.py  __init__.py  base.py  std_log.py
src/vt/utils/logging/warnings/: __init__.py
tests/test_logician/: test_lc.py
tests/test_logician/test_std_log/: test_all_levels.py  test_base.py  test_configurator.py  test_std_log.py
tests/test_logician/test_stdlog/: test_all_levels.py  test_base.py  test_configurator.py  test_format_mappers.py  test_hndlr_cfgr.py  test_main.py  test_stdlog.py  test_utils.py
tests/vt/utils/logging/test_lib_logging/test_std_log/: conftest.py  test_all_levels.py  test_base.py  test_configurator.py  test_std_log.py
tests/vt/utils/logging/test_logging/test_std_log/: test_all_levels.py  test_base.py  test_configurator.py  test_std_log.py
tests/vt/utils/logging/test_logging/test_std_log/test_vq/: test_base.py
tests/vt/utils/logging/test_warnings/: __init__.py  test_context.py
tests/vt/utils/test_logging/: test_std_log.py
