[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "logician"
version = "0.0.0dev1"
description = "Fully typed, simple, intuitive, sensible and pragmatic logger configurator for standard python logging."
readme = "README"
keywords = ["log", "logging", "logger"]
authors = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
maintainers = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
requires-python = ">=3.12"
license = "Apache-2.0"

classifiers = [
  "Development Status :: 1 - Planning",

  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",

  "Topic :: Education",
  "Topic :: System :: Logging",

  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",

  "Typing :: Typed"
]
dependencies = [
  "vt-err-hndlr @ git+https://github.com/Vaastav-Technologies/py-err-hndlr.git"
]

[dependency-groups]
dev = ["mypy", "ruff"]
test = ["pytest", "pytest-cov"]
multitest = ["tox"]
doc = ["sphinx", "sphinx-argparse"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list =
        py312

    [testenv]
    deps =
      pytest
      sphinx
      sphinx-argparse
    commands =
      python -m pytest --doctest-glob=*.rst --doctest-modules .
      python -m doctest README.md
      sphinx-build -q -b doctest docs/source docs/build/doctest
      # TODO: try to see if docs/enc/*.md can work
      # python -m doctest docs/enc/enc-init.md

    [testenv:docs]
    deps =
      sphinx
      sphinx-argparse
    commands =
      sphinx-build -q -b html docs/source docs/build/html
"""